# Proiect-Info

./: .clang-format  CMakeLists.txt
.github/workflows/: build-windows.yaml
res/: tes.csv
res/data/: Recensamant-2021.csv
res/statics-website/: index.html  map.html  styles.css
res/statistics-website-template/: index.html  main.js  reset.css  styles.css  types.d.ts
scripts/linux/: build.sh  clean.sh
scripts/windows/: build.bat
src/: main.cpp
src/Chart/: chart.cpp  chart.hpp
src/Cli/: app.cpp  app.hpp  command.cpp  command.hpp
src/Core/: utils.cpp  utils.hpp
src/Csv/: parser.cpp  parser.hpp  reader.cpp  reader.hpp
src/Html/: generator.cpp  generator.hpp
src/Statistics/: area.cpp  area.hpp  ethnicity.cpp  ethnicity.hpp  sex.hpp
